[package]
name = "hyper-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }

# Optional allocators
mimalloc = { version = "0.1", optional = true }
jemallocator = { version = "0.5.4", optional = true }


[features]
default = []
mimalloc = ["dep:mimalloc"]
jemalloc = ["dep:jemallocator"]
